# python-project-lvl3

./: .gitignore  Makefile  README.md  output_for_1.html  pyproject.toml
.github/workflows/: github_action_.yaml
page_loader/: cli.py  colors.py  custom_exseptions.py  loader.py  normalize_data.py  page_loader.py  pathes.py  response_status_codes.py  settings_logging.py  web_data_processing.py  web_requests.py
page_loader/data/: linzi-vsem-ru-karnavalnye-linzy-sharingan-.html  ru-hexlet-io-courses.html
page_loader/data/ru-hexlet-io-courses_files/: ru-hexlet-io-courses.html
page_loader/data/vospitatel-com-ua-zaniatia-rastenia-lopuh-html_files/: vospitatel-com-ua-js-main.js  vospitatel-com-ua-skin-css-main.css  vospitatel-com-ua-zaniatia-rastenia-lopuh.html
page_loader/data/vospitatel-com-ua-zaniatia-rastenia-lopuh_files/: vospitatel-com-ua-zaniatia-rastenia-lopuh.html
page_loader/data/vospitatel-com-ua-zaniatia-rastenia-vinograd-html_files/: vospitatel-com-ua-zaniatia-rastenia-vinograd-html.html
page_loader/data_old/: linzi-vsem-ru-karnavalnye-linzy-sharingan-.html
page_loader/scripts/: page_loader.py
tests/: open_img.py  test_.py
tests/fixtures/: result.html  result_html.html  web_page_after.html  web_page_link.html
