[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Serggi0 <serve4mia@gmail.com>"]
packages = [
  { include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"